[package]
name = "unist"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
colored = "2.1.0"
csv = "1.3.0"
dirs = "5.0.1"
signal-hook = "0.3.17"
crossterm = "0.23"
ratatui = "0.28.1"
unicode-width = "0.2.0"
tempfile = "3.13.0"
edit = "0.1.5"
serde = { version = "1.0.213", features = ["derive"] }
serde_yaml = "0.9.34"
matter = "0.1.0-alpha4"
toml = { version = "0.8.19", features = ["preserve_order"] }
